--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,17 +1,28 @@
-html,body,h1,h2,h3,h4,h5,h6,p,a {
+html,
+body,
+input,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
   margin: 0;
   padding: 0;
   text-decoration: none;
   color: black;
 }
 .nav-link {
-    color: black;
+  color: black;
 }
 
 .radius-pixel-20 {
   border-radius: 20px;
   color: white;
-  background-color: #1E90FF;
+  background-color: #1e90ff;
 }
 
 .container p {
@@ -58,7 +69,7 @@ html,body,h1,h2,h3,h4,h5,h6,p,a {
   display: inline-block;
   text-decoration: none;
   padding: 10px 20px;
-  background: linear-gradient(to right bottom, #FFA500, #FF6347);
+  background: linear-gradient(to right bottom, #ffa500, #ff6347);
   border-radius: 5px;
   color: #fff;
   margin: 20px;
@@ -66,7 +77,7 @@ html,body,h1,h2,h3,h4,h5,h6,p,a {
 }
 
 .btn:hover {
-  opacity: .8;
+  opacity: 0.8;
 }
 
 /* オーバーレイ */
@@ -79,12 +90,12 @@ html,body,h1,h2,h3,h4,h5,h6,p,a {
   width: 100%;
   height: 100vh;
   /* rgbaを使って60%の黒いオーバーレイにする */
-  background: rgba(0, 0, 0, 0.6);  
+  background: rgba(0, 0, 0, 0.6);
   /* デフォルトでは見えないようにする */
   opacity: 0;
   visibility: hidden;
   /* 表示する際の変化の所要時間 */
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .overlay.active {
@@ -101,7 +112,7 @@ html,body,h1,h2,h3,h4,h5,h6,p,a {
   transform: translate(-50%, -50%);
   opacity: 0;
   visibility: hidden;
-  transition: .3s;
+  transition: 0.3s;
   border: 1px solid black;
 }
 .modal a {
@@ -113,4 +124,29 @@ html,body,h1,h2,h3,h4,h5,h6,p,a {
 .modal.active {
   opacity: 1;
   visibility: visible;
+}
+
+.user-detail {
+  width: 650px;
+  margin: 100px auto 0px;
+  border: 1px solid;
+  border-radius: 20px;
+}
+
+.user-detail__input {
+  padding: 40px 30px 30px 30px;
+}
+.user-detail__input .user-info {
+  width: 100%;
+  margin: 30px 0px 300px 0px;
+  padding: 15px 0px 15px 10px;
+}
+
+.user-detail__input .user-search {
+  width: 100%;
+  padding: 10px 0px;
+  border-radius: 20px;
+  color: #ffffff;
+  background-color: gray;
+  border: none;
 }
