--- a/src/public/style.css
+++ b/src/public/style.css
@@ -125,14 +125,16 @@ a {
   opacity: 1;
   visibility: visible;
 }
-
+/**--userDetail--**/
 .user-detail {
-  width: 650px;
+  width: 550px;
   margin: 100px auto 0px;
   border: 1px solid;
   border-radius: 20px;
 }
-
+.user-detail.active {
+  display: none;
+}
 .user-detail__input {
   padding: 40px 30px 30px 30px;
 }
@@ -141,7 +143,6 @@ a {
   margin: 30px 0px 300px 0px;
   padding: 15px 0px 15px 10px;
 }
-
 .user-detail__input .user-search {
   width: 100%;
   padding: 10px 0px;
@@ -149,4 +150,232 @@ a {
   color: #ffffff;
   background-color: gray;
   border: none;
+}
+.user-detail__result {
+  width: 550px;
+  margin: 0px auto 0px;
+  border: 1px solid black;
+  border-radius: 20px;
+  background: #fff;
+  position: fixed;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+.user-detail__result .result {
+  margin: 10px 0px 10px 0px;
+}
+.user-detail__result .email {
+  margin-bottom: 250px;
+}
+.user-detail__result {
+  display: block;
+}
+.user-detail__result a:nth-child(2) {
+  margin: 10px 0px;
+}
+.user-detail__result.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+form .field {
+  margin: 24px 0;
+  position: relative;
+}
+form label,
+form input {
+  display: block;
+  font-size: 16px;
+}
+form label {
+  cursor: text;
+  position: absolute;
+  top: 15px;
+  left: 5px;
+  background: #fff;
+  color: silver;
+  pointer-events: none;
+
+  transform-origin: left;
+  transform: translateY(0);
+  transition: all 0.15s;
+}
+
+form label.move {
+  transform: translateY(-25px) scale(0.8);
+  color: rgb(29, 155, 240);
+}
+.message {
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+}
+.message.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.output {
+  width: 260px;
+  margin: 65px auto 0px;
+  padding: 30px 0px 30px 0px;
+  text-align: center;
+  border: 1px solid rgb(29, 155, 240);
+  background-color: rgb(29, 155, 240);
+  border-radius: 20px;
+}
+.send-box {
+  margin-bottom: 250px;
+  display: flex;
+}
+.send-user {
+  width: 100%;
+  padding: 10px 0px;
+  border-radius: 20px;
+  color: #ffffff;
+  background-color: gray;
+  border: none;
+}
+.button {
+  width: 85px;
+  margin: 0px auto 30px;
+  display: block;
+  text-align: center;
+  border-bottom: solid 2px;
+  font-weight: bolder;
+}
+.button-certification {
+  width: 165px;
+  margin: 0px auto 30px;
+  display: block;
+  text-align: center;
+  border-bottom: solid 2px;
+  font-weight: bolder;
+}
+
+.user-certification {
+  width: 550px;
+  margin: 40px auto 0px;
+  border: 1px solid;
+  border-radius: 20px;
+  padding: 15px 20px;
+  background: #fff;
+  position: fixed;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  border: 1px solid black;
+}
+.user-certification p {
+  margin-bottom: 10px;
+}
+.user-certification.show {
+  opacity: 1;
+  visibility: visible;
+}
+.user-detail__display.remove {
+  display: none;
+}
+.user-certification .send-certification {
+  width: 100%;
+  padding: 18px 0px 15px 10px;
+}
+
+.send-certification__button {
+  width: 100%;
+  padding: 10px 0px;
+  border-radius: 20px;
+  color: #ffffff;
+  background-color: gray;
+  border: none;
+}
+.user-password {
+  width: 550px;
+  margin: 40px auto 0px;
+  border: 1px solid;
+  border-radius: 20px;
+  padding: 15px 20px;
+  background: #fff;
+  position: fixed;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  border: 1px solid black;
+}
+.button-password {
+  width: 81px;
+  margin: 20px auto 30px;
+  display: block;
+  text-align: center;
+  border-bottom: solid 2px;
+  font-weight: bolder;
+}
+.user-password.show2 {
+  opacity: 1;
+  visibility: visible;
+}
+.user-certification__display.remove2 {
+  display: none;
+}
+.user-password__display.remove3 {
+  display: none;
+}
+.user-password h4 {
+  margin-bottom: 29px;
+  font-size: 18px;
+}
+
+.user-password__button {
+  width: 100%;
+  padding: 10px 0px;
+  border-radius: 20px;
+  color: #ffffff;
+  background-color: gray;
+  border: none;
+}
+.user-password__send {
+  width: 100%;
+  padding: 17px 0px 15px 10px;
+}
+.complete-password {
+  width: 550px;
+  margin: 40px auto 0px;
+  border: 1px solid;
+  border-radius: 20px;
+  padding: 15px 20px;
+  background: #fff;
+  position: fixed;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s;
+  border: 1px solid black;
+}
+.complete-password.show3 {
+  opacity: 1;
+  visibility: visible;
+}
+.button-complete {
+  width: 70px;
+  margin: 50px auto 30px;
+  display: block;
+  text-align: center;
+  border-bottom: solid 2px;
+  font-weight: bolder;
+}
+.complete-password h5 {
+  font-size: 18px;
+  text-align: center;
 }
