feat: 背景色を白に変更しました

--- a/src/public/style.css
+++ b/src/public/style.css
@@ -727,6 +727,7 @@ form label[for='confirm-register'] {
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.2s;
+  background-color: white;
 }
 .account-info-modal.show-modal {
   opacity: 1;
