--- a/src/public/style.css
+++ b/src/public/style.css
@@ -681,14 +681,19 @@ form label[for='confirm-register'] {
 
 /**-- index --**/
 .wrapper {
-  width: 800px;
+  width: 100%;
+  min-width: 800px;
+  max-width: 1265px;
   margin: 0px auto;
 }
 .content {
   display: flex;
 }
+.main {
+  flex: 1;
+}
 .container {
-  width: 445px;
+  min-width: 445px;
 }
 .left-bar {
   width: 275px;
